# bioimmagini_II

./: .gitattributes  .gitignore  INDICE.md  QUICK_START_DOMANI.md  README.md  README_de.md  TODO.md  appunti_obsidian  setup_refactoring_es3.sh
.claude/: project_context.md
1. Modello dell'immagine biomedica e misure di qualità/: 1. Dal Post-procesing all'Analisi dell'Immagine.md  2. Definizione di Immagine Biomedica.md  3. Computer Vision e Analisi dell'Immagine Biomedica.md  4. Modello dell'Immagine Biomedica.md  5. Qualità dell'immagine Biomedica.md  6. Case Study - Bando CONSIP per Scanner MRI.md
2. Interpolazione, Filtraggio e Compressione/: 1. Intro.md  2. Interpolazione.md  3. Filtraggio.md  4. Compressione.md  5. Super-Resolution.md
3. Segmentaione dell'Immagine Biomedica/: 1. Intro.md  2. Machine Learning.md
docs/: PYTHON_PRO_REPORT_ES3.md  SESSION_PLAN_ES3_REFACTORING.md  requirements-docs.txt
docs/source/: conf.py  index.rst
docs/source/api-reference/: es_1_modules.rst  es_2_modules.rst  index.rst
docs/source/developer-guide/: architecture.rst  contributing.rst  conventions.rst  rebasing-guide.rst
docs/source/exercises/: index.rst
docs/source/exercises/es_1/: api.rst  examples.rst  index.rst  matlab-conversion.rst  theory.rst  usage.rst
docs/source/exercises/es_2/: api.rst  examples.rst  index.rst  matlab-conversion.rst  theory.rst  usage.rst
docs/source/exercises/es_3/: index.rst
docs/source/getting-started/: installation.rst  project-structure.rst  quickstart.rst
docs/source/references/: bibliography.rst  external-resources.rst
esercitazioni/esercitazioni_matlab/Esercitazione_13_04_2022/: regionGrowing3D.m
esercitazioni/esercitazioni_matlab/LEZIONE_08_23_03_2022 (Esercitazione Clustering)/PERFUSIONE/: I01  I02  I07  I08  I11  I12  I19  I20  I26  I27  I32  I36  I37  I38  I40  I41  I46  I47  I48  I49  I52  I57  I58  I60  I74  I75  I79
esercitazioni/esercitazioni_matlab/LEZIONE_17_04_05_2022 (Esercitazzione serie temporali)/: testDaemons.m
esercitazioni/esercitazioni_matlab/LEZIONE_17_04_05_2022 (Esercitazzione serie temporali)/RENAL_PERF/: I00  I01  I03  I04  I07  I08  I10  I12  I14  I15  I17  I18
esercitazioni/esercitazioni_matlab/es_1__09_03_2022/: Calcolo_SD.m  EsempioCalcoloSD.m  Test_M_SD.m
esercitazioni/esercitazioni_matlab/es_1__09_03_2022/__MACOSX/: ._Calcolo_SD.m  ._EsempioCalcoloSD.m  ._Test_M_SD.m  ._esempio_LGE [6903]
esercitazioni/esercitazioni_python/: activate.sh  requirements.txt
esercitazioni/esercitazioni_python/es_10__18_05_2022_cnn_classificazione/: README.md  README.qmd  requirements.txt
esercitazioni/esercitazioni_python/es_10__18_05_2022_cnn_classificazione/src/: __init__.py  cardiac_slice_classifier.py  utils.py
esercitazioni/esercitazioni_python/es_11__25_05_2022_unet_segmentazione/: README.md  README.qmd  requirements.txt
esercitazioni/esercitazioni_python/es_11__25_05_2022_unet_segmentazione/src/: __init__.py  train_brain_segmentation.py  train_skull_segmentation.py  utils.py
esercitazioni/esercitazioni_python/es_12__placeholder/: README.md  requirements.txt
esercitazioni/esercitazioni_python/es_12__placeholder/src/: __init__.py
esercitazioni/esercitazioni_python/es_1__09_03_2022_calcolo_sd/: .gitignore  README.md  README.qmd  pyproject.toml  requirements.txt  setup.py
esercitazioni/esercitazioni_python/es_1__09_03_2022_calcolo_sd/data/: IMG-0001-00001.dcm  IMG-0002-00001.dcm  phantom.dcm
esercitazioni/esercitazioni_python/es_1__09_03_2022_calcolo_sd/docs/: es_01.md  es_01.qmd
esercitazioni/esercitazioni_python/es_1__09_03_2022_calcolo_sd/src/: __init__.py  calcolo_sd.py  config.py  esempio_calcolo_sd.py  (+4 more)
esercitazioni/esercitazioni_python/es_2__16_03_2022_filtraggio/: README.md  README.qmd  pyproject.toml
esercitazioni/esercitazioni_python/es_2__16_03_2022_filtraggio/data/: Phantom_CT_PET
esercitazioni/esercitazioni_python/es_2__16_03_2022_filtraggio/docs/: es_02.md  es_02.qmd
esercitazioni/esercitazioni_python/es_2__16_03_2022_filtraggio/src/: __init__.py  config.py  dicom_utils.py  exceptions.py  filters_3d.py  interactive_roi_selection.py  main_filtering.py  metrics.py  types.py
esercitazioni/esercitazioni_python/es_2__16_03_2022_filtraggio/tests/: test_basic.py
esercitazioni/esercitazioni_python/es_3__23_03_2022_clustering/: .gitignore  Esercitazione_3_Clustering.qmd  GUIDA_DIMOSTRAZIONE.qmd  README.md  README.qmd  coverage.xml  pyproject.toml  requirements.txt
esercitazioni/esercitazioni_python/es_3__23_03_2022_clustering/data/: GoldStandard.mat  README.md
esercitazioni/esercitazioni_python/es_3__23_03_2022_clustering/data/perfusione/: I03  I04  I05  I06  I09  I10  I13  I14  I15  I16  I17  I18  I21  I22  I23  I24  I25  I28  I29  I30  I31  I33  I34  I35  I39  I42  I43  I44  I45  I50  I51  I53  I54  I55  I56  I59  I61  I62  I63  I64  (+12 more)
esercitazioni/esercitazioni_python/es_3__23_03_2022_clustering/docs/: PHASE1_COMPLETION_REPORT.md
esercitazioni/esercitazioni_python/es_3__23_03_2022_clustering/src/: __init__.py  config.py  custom_types.py  exceptions.py  kmeans_segmentation.py  optimize_kmeans.py  plot_time_curves.py  utils.py
esercitazioni/esercitazioni_python/es_3__23_03_2022_clustering/tests/: conftest.py  test_infrastructure.py  test_kmeans.py  test_utils.py
esercitazioni/esercitazioni_python/es_4__30_03_2022_funzione_cardiaca/: README.md  README.qmd
esercitazioni/esercitazioni_python/es_5__06_04_2022_segmentazione_grasso/: .gitignore  README.md  README.qmd  requirements.txt
esercitazioni/esercitazioni_python/es_6__13_04_2022_albero_polmonare/: .gitignore  README.md  README.qmd  requirements.txt
esercitazioni/esercitazioni_python/es_7__27_04_2022_registrazione/: .gitignore  README.md  README.qmd  requirements.txt
esercitazioni/esercitazioni_python/es_8__04_05_2022_serie_temporali/: README.md  README.qmd
esercitazioni/esercitazioni_python/es_9__11_05_2022_mappe_parametriche/: README.md  README.qmd  README_DEMO.qmd
prompts/: REBASING_GUIDE.md
src/dicom_import/: __init__.py  dicom_reader.py  metadata_extractor.py  series_manager.py  validators.py
(+37 files in other folders)
