[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac-segmentation"
version = "0.1.0"
description = "K-means based cardiac MRI segmentation for perfusion analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Bioimaging Positano", email = "brusc@example.com"}
]
keywords = ["cardiac", "mri", "segmentation", "kmeans", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pydicom>=2.4.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.92.0",

    # Type checking
    "mypy>=1.7.0",
    "types-tqdm",

    # Linting and formatting
    "ruff>=0.1.6",

    # Data validation
    "pydantic>=2.5.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.92.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Repository = "https://github.com/brusc/bioimmagini_positano"
Documentation = "https://github.com/brusc/bioimmagini_positano/tree/main/docs"

# ============================================================================
# Ruff Configuration (Linting & Formatting)
# ============================================================================

[tool.ruff]
# Python version target
target-version = "py312"

# Line length
line-length = 88

# File selection
include = ["src/**/*.py", "tests/**/*.py"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]

# Disable specific rules
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any) disallowed
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

# Allow autofix for specific rule categories
fixable = ["ALL"]
unfixable = []

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN001",  # Missing type annotations in tests
    "ANN201",  # Missing return type annotation
    "PLR2004", # Magic values are OK in tests
    "S101",    # Use of assert is expected in pytest
    "NPY002",  # Legacy np.random calls are OK in tests
    "RET504",  # Unnecessary assignment before return is OK in tests
]
"src/types.py" = [
    "A005",    # Module shadows standard library (intentional)
    "UP040",   # TypeAlias is OK for Python 3.12 compatibility
]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["src"]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Specific module configurations
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "pydicom.*",
    "matplotlib.*",
    "pandas.*",
]
ignore_missing_imports = true

# Stricter settings for src/
[[tool.mypy.overrides]]
module = "src.*"
disallow_untyped_defs = true
warn_return_any = true

# Relaxed settings for tests/
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Pytest options
addopts = [
    "-ra",                           # Show summary of all test outcomes
    "--strict-markers",              # Enforce marker registration
    "--strict-config",               # Enforce config validation
    "--showlocals",                  # Show local variables in tracebacks
    "--tb=short",                    # Short traceback format
    "--cov=src",                     # Coverage for src/ directory
    "--cov-report=term-missing",     # Show missing lines in terminal
    "--cov-report=html",             # Generate HTML coverage report
    "--cov-report=xml",              # Generate XML coverage report (for CI)
    "--cov-fail-under=0",            # Don't fail on low coverage (adjust later)
]

# Markers for test categorization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as performance benchmarks",
    "dicom: marks tests requiring DICOM data",
]

# Filter warnings
filterwarnings = [
    "error",                                                    # Treat warnings as errors
    "ignore::DeprecationWarning",                              # Ignore deprecation warnings
    "ignore::PendingDeprecationWarning",                       # Ignore pending deprecations
    "ignore:.*numpy.ndarray size changed.*:RuntimeWarning",    # Numpy ABI warnings
]

# Coverage settings
[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Setuptools Configuration
# ============================================================================

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*", "notebooks*"]
